 ** Added missing spells to the SpellDamageTaken equivalency
 ** Attempted a fix for error <string>:"Condition_SPELLDMG":3: Usage: GetSpellBonusDamage(school)
 ** All slashes in custom texture paths will be converted to backslashes upon processing.
 ** The [Name] DogTag should now always update properly.
 
===v6.0.4===
 * **New icon event: On Condition Set Passing. Allows you to create an event handler that reacts to the state of a condition set.**
 * New icon event: On Icon Setup. Essentially allows you to have a "default state" for icon animations.
 * Added a dropdown menu to select an icon when right clicking a spot on your screen that contains multiple icons.
 * Conditions with no maximum value (e.g. Health/Mana; any condition that checks a time) now allow manual input of a value.
 * There is now an option to allow configuration while in combat (as opposed to allowing at all the time with potential bugs, the options module now loads at login when this option is enabled to prevent many errors and bugs).
 * New conditions:
 ** Spell charge time
 ** In pet battle
 ** Equipment set equipped
 ** Icon Shown Time
 ** Icon Hidden Time
 * New setting for Buff/Debuff icons: Hide if no units.
 * Added Challenge Mode and 40 Player raid to the Instance Type condition.
 * The Totem icon type has been re-focused towards the Rune of Power talent for mages.
 * The Buff Efficiency Threshold setting is back.
 * Changed all file encodings to UTF-8 in hopes of fixing the loading problems that many users are having.
 * The {{{[Duration]}}} tag now has a parameter that allows for the GCD to be ignored ({{{[Duration(gcd=false)]}}})
 * Added a separate toggle for the Show Timer Text option that only affects the timer text that ElvUI provides.
 * Bug fixes:
 ** Minimum group frame level is now 5 instead of 1 to prevent issues caused at low frame levels.
 ** Increased the delay on LoadFirstValidIcon from 0.1 seconds to 0.5 seconds in hopes of preventing the AceCD:804 error more often.