@@ -169,10 +169,17 @@ TMW:RegisterCallback("TMW_DB_INITIALIZED", ClassSpellCache)
 local RequestedFrom = {}
 local commThrowaway = {}
 
+local commRecievedQueue = {}
+
 function ClassSpellCache:OnCommReceived(prefix, text, channel, who)
 	if prefix ~= self.CONST.COMM_SLUG
 	or who == UnitName("player")
 	then
+		return
+	end
+	
+	if InCombatLockdown() then
+		tinsert(commRecievedQueue, {prefix, text, channel, who})
 		return
 	end
 	
@@ -227,6 +234,15 @@ function ClassSpellCache:OnCommReceived(prefix, text, channel, who)
 		TMW:Error(arg1)
 	end
 end
+
+ClassSpellCache:RegisterEvent("PLAYER_REGEN_ENABLED", function()
+	if not InCombatLockdown() then
+		for k, data in pairs(commRecievedQueue) do
+			ClassSpellCache:OnCommReceived(unpack(data))
+		end
+		wipe(commRecievedQueue)
+	end
+end)
 
 function ClassSpellCache:PLAYER_ENTERING_WORLD()
 	self:SendCommMessage(self.CONST.COMM_SLUG, self:Serialize("RCSL"), "RAID")
